Add receptor preprocessing before PDBQT conversion

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -166,10 +166,20 @@ rule prepare_receptor_phys:
     conda: "envs/openbabel.yaml"
     input: pdb=config["structure"]["clean_pdb"]
     output: pdbqt="results/module1/target_prepared.pdbqt"
+    log: "logs/module1/prepare_receptor_phys.log"
     shell:
         """
         set -euo pipefail
-        obabel {input.pdb} -O {output.pdbqt} -xr --partialcharge gasteiger -p 7.4
+        mkdir -p $(dirname {log})
+        tmp_dir=$(mktemp -d)
+        cleanup() {{ rm -rf "$tmp_dir"; }}
+        trap cleanup EXIT
+        tmp_pdb="$tmp_dir/receptor_preprocessed.pdb"
+        tmp_mol2="$tmp_dir/receptor_preprocessed.mol2"
+
+        python workflow/scripts/preprocess_receptor.py {input.pdb} "$tmp_pdb" 2> {log}
+        obabel "$tmp_pdb" -O "$tmp_mol2" --addtotitle "receptor_prepared" --neutralize -p 7.4 2>> {log}
+        obabel "$tmp_mol2" -O {output.pdbqt} -xr --partialcharge gasteiger -p 7.4 --addtotitle "receptor_prepared" 2>> {log}
         """
 
 rule discover_best_candidate:
