Document gnina conda availability and fallback

--- a/workflow/envs/gnina.yaml
+++ b/workflow/envs/gnina.yaml
@@ -4,6 +4,6 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  # gnina no está en canales conda-forge/bioconda en este entorno;
+  # gnina no está disponible en conda-forge/bioconda (verificado vía Anaconda API);
   # el rescoring se ejecuta vía contenedor (gnina_container_wrapper.sh).
   - smina
